// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseSlugs should return expected result no locales 1`] = `
{
  "fallback": "blocking",
  "paths": [
    {
      "params": {
        "slug": [
          "slug1",
        ],
      },
    },
    {
      "params": {
        "slug": [
          "slug",
          "split",
        ],
      },
    },
  ],
}
`;

exports[`parseSlugs should return expected result with locales 1`] = `
{
  "fallback": "blocking",
  "paths": [
    {
      "locale": "de",
      "params": {
        "slug": [
          "slug1",
        ],
      },
    },
    {
      "locale": "en",
      "params": {
        "slug": [
          "slug1-en",
        ],
      },
    },
    {
      "locale": "da",
      "params": {
        "slug": [
          "slug1",
        ],
      },
    },
    {
      "locale": "de",
      "params": {
        "slug": [
          "slug",
          "split",
        ],
      },
    },
    {
      "locale": "en",
      "params": {
        "slug": [
          "slug",
          "split-en",
        ],
      },
    },
    {
      "locale": "da",
      "params": {
        "slug": [
          "slug",
          "split",
        ],
      },
    },
  ],
}
`;
